# medium-notion-translator

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  bookmarks.txt  feeds.yml  interests.yml  pyproject.toml
.claude/commands/: translate-medium.md
.github/workflows/: claude-code.yml
docs/: RADAR.md
docs/superpowers/plans/: 2026-04-16-topics-extraction.md  2026-06-19-radar-rss-digest.md
docs/superpowers/specs/: 2026-04-16-topics-extraction-design.md  2026-06-19-radar-rss-digest-design.md  2026-07-03-deepdive-retry-design.md
scripts/: AppIcon.icns  MediumNotionTranslator.applescript  run-daily.sh  run-radar.sh  setup.sh
scripts/launchd/: com.akira.medium-bookmark.plist  com.akira.tech-radar.plist  install-radar.sh  install.sh
src/medium_notion/: __init__.py  __main__.py  browser.py  cli.py  config.py  logger.py  models.py  notion_client.py  slack.py  translator.py
src/medium_notion/radar/: __init__.py  config.py  (+10 more)
tests/: conftest.py  test_browser_stealth.py  test_cli_fatal_error.py  test_cli_fatal_notify.py  test_config.py  test_list_url_cache.py  test_models.py  test_notion_client.py  test_paragraph_split.py  test_radar_cli.py  test_radar_config.py  test_radar_config_env.py  test_radar_curator.py  test_radar_deepdive.py  test_radar_digest.py  test_radar_fulltext.py  test_radar_models.py  test_radar_notion_blocks.py  test_radar_notion_writer.py  test_radar_pipeline.py  test_radar_rss.py  test_radar_slack.py  test_radar_state.py  test_skip_uses_notion_only.py  test_slack.py  test_translator.py
tests/fixtures/: sample_feed.xml
(+3 files in other folders)
